Fix DCHECKs in DevToolsFileSystemIndexer

Bug: 737748
Change-Id: I28a63693629c087781fd6dc031ae202c236fd975