chrome/browser/devtools/devtools_file_system_indexer.cc
@@ -43,9 +43,9 @@ namespace {
 base::SequencedTaskRunner* impl_task_runner() {
   constexpr base::TaskTraits kBlockingTraits = {base::MayBlock(),
                                                 base::TaskPriority::BACKGROUND};
-  base::LazySequencedTaskRunner g_sequenced_task_task_runner =
+  static base::LazySequencedTaskRunner s_sequenced_task_task_runner =
       LAZY_SEQUENCED_TASK_RUNNER_INITIALIZER(kBlockingTraits);
-  return g_sequenced_task_task_runner.Get().get();
+  return s_sequenced_task_task_runner.Get().get();
 }
 
 typedef int32_t Trigram;
